--- a/index.html
+++ b/index.html
@@ -450,8 +450,10 @@
           <div class="card-body">
             <div class="h4 mt-0 title">Certification</div>
             <ul>
+                <li><p>Google Data Analytics Professional certification</p></li>              
                 <li><p>Google Digital Marketing certification</p></li>
                 <li><p>Data Science Specialization ( Coursera )</p></li>
+                <li><p>Atlassian Jira certification ( Coursera )</p></li>                
             </ul>
           </div>
           <div class="col-lg-7 col-md-12">
