--- a/index.html
+++ b/index.html
@@ -482,8 +482,9 @@
       <div class="card-body">
         <div class="row">
           <div class="card-body">
-            <div class="h4 mt-0 title">Certification</div>
+            <div class="h4 mt-0 title">Extra Curricular</div>
             <ul>
+                <li><p>Technical Head of UBA Cell, RGIT</p></li>
                 <li><p>Google Crowdsource Contributor</p></li>
                 <li><p>Google Local Guides</p></li>
                 <li><p>Hackerrank - <a href="https://www.hackerrank.com/munshihuzaifah?h_r=internal-search&hr_r=1" target="_blank">View Profile</a></p></li>
