--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
               <div class="col-sm-8">munshihuzaifah@gmail.com</div>
             </div>
-            <div class="row mt-3">
+<!--             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
               <div class="col-sm-8">+91 8291434018</div>
-            </div>
+            </div> -->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Cutchi Memon Colony, Opp. Natraj Market, Malad West, Mumbai 400064</div>
+              <div class="col-sm-8">Cutchi Memon Colony, Malad West, Mumbai 400064</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -421,7 +421,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <!-- <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
@@ -437,7 +437,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 <p>
@@ -575,8 +575,7 @@
                   <div class="card-body">
                     <!-- <p class="mb-2"><strong>Address:  </strong>Cutchi Memon Colony, Malad West, Mumbai 400064</p> -->
                     <!-- <p class="pb-2">140, City Center, New York, U.S.A</p> -->
-                    <p class="pb-4"><strong>Phone:  </strong>8291434018</p>
-                    <!-- <p class="pb-2">+1718-111-0011</p> -->
+                    <!-- <p class="pb-2">+1718-111-0011</p> --><br>
                     <p class="pb-4"><strong>Email:  </strong><a href="mailto:munshihuzaifah@gmail.com">munshihuzaifah@gmail.com</a></p>
                     <!-- <p>anthony@company.com</p> -->
                   </div>
