--- a/index.html
+++ b/index.html
@@ -595,6 +595,10 @@
       <div class="text-center text-muted">
         <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
       </div>
+      <center>
+       <a href='https://www.symptoma.ro/'>Motor de căutare medicală</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e4b17907d72b8e93d72b5f4d649adaceb1f79471'></script>
+      <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/842490/t/7"></script>
+      </center>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
     <script src="js/core/popper.min.js?ver=1.1.0"></script>
