--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
           <div class="card-body">
             <div class="h5">Mini Project</div>
             <p>MCQ - World would test your knowledge on 3 major languages i.e C, C++, Web Development. It provides with basic 10 MCQ's where result will be evaluated and provided to the user. </p>
-            <a href="https://huzaifahmunshi.000webhostapp.com" target="_blank">View Website</a>
-          </div>
+<!--             <a href="https://huzaifahmunshi.000webhostapp.com" target="_blank">View Website</a>
+ -->          </div>
         </div>
       </div>
     </div>
