--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <div class="card-body">
             <div class="h5">Internship</div>
             <p>Created a website for the UBA Cell, RGIT showcasing their activities done till date. Also providing detailed information about their work by providing proposals and documentation. </p>
-            <a href="https://mctrgit.ac.in/uba/" target="_blank">View Website</a>
+          <!--   <a href="https://mctrgit.ac.in/uba/" target="_blank">View Website</a> -->
           </div>
         </div>
       </div>
