--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Internship</div>
-            <p>Created a website for the UBA Cell, RGIT showcasing their activities done till date. Also providing detailed information about their work by providing proposals and documentation. </p>
+            <p>On-site activity including requirements gathering for UBA upcoming projects </p>
+            <p>Creating a portal for the UBA Cell, RGIT showcasing their activities done till date. </p>
+            <p>Creating pproposals and documentation of the projects accomplished </p>
           <!--   <a href="https://mctrgit.ac.in/uba/" target="_blank">View Website</a> -->
           </div>
         </div>
