--- a/index.html
+++ b/index.html
@@ -341,9 +341,11 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Internship</div>
-            <p>On-site activity including requirements gathering for UBA upcoming projects </p>
-            <p>Creating a portal for the UBA Cell, RGIT showcasing their activities done till date. </p>
-            <p>Creating pproposals and documentation of the projects accomplished </p>
+            <ul>
+            <p><li>On-site activity including requirements gathering for UBA upcoming projects </li></p>
+            <p><li>Creating a portal for the UBA Cell, RGIT showcasing their activities done till date. </li></p>
+            <p><li>Creating pproposals and documentation of the projects accomplished <li></p>
+              <ul>
           <!--   <a href="https://mctrgit.ac.in/uba/" target="_blank">View Website</a> -->
           </div>
         </div>
