--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Huzaifah Munshi. pursuing Information Technology from Rajiv Gandhi Institute of Technology.</p>
-            <p>I have experience in Web Development and keen interest in Data Science. </p>
+            <p>I have experience in Web Development and keen interest in Data Analytics. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -456,7 +456,8 @@
                 <li><p>Google Data Analytics Professional certification</p></li>              
                 <li><p>Google Digital Marketing certification</p></li>
                 <li><p>Data Science Specialization ( Coursera )</p></li>
-                <li><p>Atlassian Jira certification ( Coursera )</p></li>                
+                <li><p>Atlassian Jira certification ( Coursera )</p></li>
+                <li><p>TCS Career Skills Certification</p></li>
             </ul>
           </div>
           <div class="col-lg-7 col-md-12">
@@ -466,7 +467,7 @@
                 <li>Web Development & Data Science Internship from The Sparks Foundation</p></li>
                 <li><p>Rural Development Internship from UBA Cell, RGIT</p></li>
                 <li><p>Campus Ambassador Internship from Woovly</p></li>
-                <li><p>Technical Content Writing Internship from Sahu Technologies</p></li>
+                <li><p>Technical Content Writing Internship from Sahu Technologies, TCR Innovation</p></li>
                 <li><p>3 days Bright Network Internship Experience UK</p></li>
             </ul>
           </div>
@@ -489,6 +490,7 @@
                 <li><p>Technical Head of UBA Cell, RGIT</p></li>
                 <li><p>Google Crowdsource Contributor</p></li>
                 <li><p>Google Local Guides</p></li>
+                <li><p>Deloitte STEM Connect Virtual Experience Program (Forage)</p></li>
                 <li><p>Hackerrank - <a href="https://www.hackerrank.com/munshihuzaifah?h_r=internal-search&hr_r=1" target="_blank">View Profile</a></p></li>
                 <li><p>Medium - <a href="https://medium.com/@munshihuzaifah" target="_blank">View Profile</a></p></li>
                 
