--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Huzaifah Munshi. pursuing Information Technology from Rajiv Gandhi Institute of Technology.</p>
-            <p>I have experience in Web Development and keen interest in Data Analytics. </p>
+            <p>I’ve always been a great problem solver, an independent introvert, and a technophile obsessed with the latest devices. Today, I’m working as a software engineer for Sopra Steria India., and I get to show off all these elements of who I am. I started learning to code when I was a teenager, though it was always more of a hobby than a career focus. After a college education in Information Technology, and continuing to pursue that hobby, I realized software engineering was the right field for me.</p>
+            <p>Since then, I’ve worked on countless freelance projects and have been involved with a handful of notable college committees. Today, I’m working as a Software Engineer with the amazing team at Sopra Steria India . Some notable certifications accomplished by me are : AWS Certified Developer Associate, Microsoft Azure Fundamentals and Microsoft AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
+<!--             <p>I have experience in Web Development and keen interest in Data Analytics. </p> -->
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -78,7 +79,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">20</div>
+              <div class="col-sm-8">21</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -148,7 +149,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Microsoft Office</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">AWS</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
               </div>
@@ -297,7 +298,7 @@
 
 <div class="section" id="projects">
   <div class="container cc-experience">
-    <div class="h4 text-center mb-4 title">Projects</div>
+    <div class="h4 text-center mb-4 title">College Projects</div>
   <!--  <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -453,11 +454,13 @@
           <div class="card-body">
             <div class="h4 mt-0 title">Certification</div>
             <ul>
+                <li><p>AWS Certified Developer Associate (DVA-C01)</p></li>              
+                <li><p>Microsoft Azure Fundamentals (AZ-900)</p></li>
+                <li><p>Microsoft Azure AI Fundamentals (A1-900)</p></li>
+                <li><p>Microsoft Azure Data Fundamentals (DP-900)</p></li>
                 <li><p>Google Data Analytics Professional certification</p></li>              
                 <li><p>Google Digital Marketing certification</p></li>
-                <li><p>Data Science Specialization ( Coursera )</p></li>
                 <li><p>Atlassian Jira certification ( Coursera )</p></li>
-                <li><p>TCS Career Skills Certification</p></li>
             </ul>
           </div>
           <div class="col-lg-7 col-md-12">
@@ -502,8 +505,6 @@
               <ul>
                 <li>Web Development & Data Science Internship from The Sparks Foundation</p></li>
                 <li><p>Rural Development Internship from UBA Cell, RGIT</p></li>
-                <li><p>Campus Ambassador Internship from Woovly</p></li>
-                <li><p>Technical Content Writing Internship from Sahu Technologies</p></li>
                 <li><p>3 days Bright Network Internship Experience UK</p></li>
             </ul>
           </div>
