--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>I’ve always been a great problem solver, an independent introvert, and a technophile obsessed with the latest devices. Today, I’m working as a software engineer for Sopra Steria India., and I get to show off all these elements of who I am. I started learning to code when I was a teenager, though it was always more of a hobby than a career focus. After a college education in Information Technology, and continuing to pursue that hobby, I realized software engineering was the right field for me.</p>
-            <p>Since then, I’ve worked on countless freelance projects and have been involved with a handful of notable college committees. Today, I’m working as a Software Engineer with the amazing team at Sopra Steria India . Some notable certifications accomplished by me are : AWS Certified Developer Associate, Microsoft Azure Fundamentals and Microsoft AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
+            <p>I’ve always been a great problem solver, an independent introvert, and a technophile obsessed with the latest devices. Today, I’m working as a software engineer for Sopra Steria India., and I get to show off all these elements of who I am.</p>
+            <p>I started learning to code when I was a teenager, though it was always more of a hobby than a career focus. After a college education in Information Technology, and continuing to pursue that hobby, I realized software engineering was the right field for me.</p>
+            <p>Since then, I’ve worked on countless freelance projects and have been involved with a handful of notable college committees. Today, I’m working as a Software Engineer with the amazing team at Sopra Steria India .</p>
+            <p>Some notable certifications accomplished by me are : AWS Certified Developer Associate, Microsoft Azure Fundamentals and Microsoft AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
 <!--             <p>I have experience in Web Development and keen interest in Data Analytics. </p> -->
           </div>
         </div>
