--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>I’ve always been a great problem solver, an independent introvert, and a technophile obsessed with the latest devices. Today, I’m working as a software engineer for Sopra Steria India., and I get to show off all these elements of who I am.</p>
-            <p>I started learning to code when I was a teenager, though it was always more of a hobby than a career focus. After a college education in Information Technology, and continuing to pursue that hobby, I realized software engineering was the right field for me.</p>
-            <p>Since then, I’ve worked on countless freelance projects and have been involved with a handful of notable college committees. Today, I’m working as a Software Engineer with the amazing team at Sopra Steria India .</p>
-            <p>Some notable certifications accomplished by me are : AWS Certified Developer Associate, Microsoft Azure Fundamentals and Microsoft AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
+            <br><p>I started learning to code when I was a teenager, though it was always more of a hobby than a career focus. After a college education in Information Technology, and continuing to pursue that hobby, I realized software engineering was the right field for me.</p>
+            <br><p>Since then, I’ve worked on countless freelance projects and have been involved with a handful of notable college committees. Today, I’m working as a Software Engineer with the amazing team at Sopra Steria India .</p>
+            <br><p>Some notable certifications accomplished by me are : AWS Certified Developer Associate, Microsoft Azure Fundamentals and Microsoft AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
 <!--             <p>I have experience in Web Development and keen interest in Data Analytics. </p> -->
           </div>
         </div>
@@ -459,11 +459,11 @@
           <div class="card-body">
             <div class="h4 mt-0 title">Certification</div>
             <ul>
-                <li><p>AWS Certified Developer Associate (DVA-C01) <a href='https://www.credly.com/badges/fd21ef2f-bc7c-40af-b77b-f9263ca83b06/public_url'>View Badge</a></p></li>              
-                <li><p>Microsoft Azure Fundamentals (AZ-900) <a href='https://www.credly.com/badges/cc97e288-b869-45a6-a5d1-ac9a7e25b81f/public_url'>View Badge</a></p></li>
-                <li><p>Microsoft Azure AI Fundamentals (A1-900) <a href='https://www.credly.com/badges/c2a5aece-5a36-44bf-be1e-978f8ec29bf2/public_url'>View Badge</a></p></li>
-              <li><p>Microsoft Azure Data Fundamentals (DP-900) <a href='https://www.credly.com/badges/a5b7806d-8bca-4445-a80b-310eec3e2955/public_url'>View Badge</a></p></li>
-                <li><p>Google Data Analytics Professional certification <a href='https://www.credly.com/badges/dfbd25e6-7f49-4bd7-8449-9d581b3a954f/public_url'>View Badge</a></p></li>              
+                <li><p>AWS Certified Developer Associate (DVA-C01) <a href='https://www.credly.com/badges/fd21ef2f-bc7c-40af-b77b-f9263ca83b06/public_url'>Verify</a></p></li>              
+                <li><p>Microsoft Azure Fundamentals (AZ-900) <a href='https://www.credly.com/badges/cc97e288-b869-45a6-a5d1-ac9a7e25b81f/public_url'>Verify</a></p></li>
+                <li><p>Microsoft Azure AI Fundamentals (A1-900) <a href='https://www.credly.com/badges/c2a5aece-5a36-44bf-be1e-978f8ec29bf2/public_url'>Verify</a></p></li>
+              <li><p>Microsoft Azure Data Fundamentals (DP-900) <a href='https://www.credly.com/badges/a5b7806d-8bca-4445-a80b-310eec3e2955/public_url'>Verify</a></p></li>
+                <li><p>Google Data Analytics Professional certification <a href='https://www.credly.com/badges/dfbd25e6-7f49-4bd7-8449-9d581b3a954f/public_url'>Verify</a></p></li>              
                 <li><p>Google Digital Marketing certification</p></li>
                 <li><p>Atlassian Jira certification ( Coursera )</p></li>
             </ul>
