--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/161753954186040913.png" alt="Image"/></a></div>
           <div class="h2 title">HUZAIFAH MUNSHI</div>
-          <p class="category text-white">Fresher</p>
+          <p class="category text-white">SOFTWARE ENGINEER AT SOPRA STERIA INDIA</p>
         </div>
       </div>
       <div class="section">
@@ -475,8 +475,6 @@
               <ul>
                 <li>Web Development & Data Science Internship from The Sparks Foundation</p></li>
                 <li><p>Rural Development Internship from UBA Cell, RGIT</p></li>
-                <li><p>Campus Ambassador Internship from Woovly</p></li>
-                <li><p>Technical Content Writing Internship from Sahu Technologies, TCR Innovation</p></li>
                 <li><p>3 days Bright Network Internship Experience UK</p></li>
             </ul>
           </div>
