--- a/index.html
+++ b/index.html
@@ -461,10 +461,10 @@
             <ul>
                 <li><p>AWS Certified Developer Associate (DVA-C01) <a href='https://www.credly.com/badges/fd21ef2f-bc7c-40af-b77b-f9263ca83b06/public_url'><i class='fa fa-external-link' style='color:#34920c'></i>
 </a></p></li>              
-                <li><p>Microsoft Azure Fundamentals (AZ-900) <a href='https://www.credly.com/badges/cc97e288-b869-45a6-a5d1-ac9a7e25b81f/public_url'><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
-                <li><p>Microsoft Azure AI Fundamentals (A1-900) <a href='https://www.credly.com/badges/c2a5aece-5a36-44bf-be1e-978f8ec29bf2/public_url'><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
-              <li><p>Microsoft Azure Data Fundamentals (DP-900) <a href='https://www.credly.com/badges/a5b7806d-8bca-4445-a80b-310eec3e2955/public_url'><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
-                <li><p>Google Data Analytics Professional certification <a href='https://www.credly.com/badges/dfbd25e6-7f49-4bd7-8449-9d581b3a954f/public_url'><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>              
+                <li><p>Microsoft Azure Fundamentals (AZ-900) <a href='https://www.credly.com/badges/cc97e288-b869-45a6-a5d1-ac9a7e25b81f/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
+                <li><p>Microsoft Azure AI Fundamentals (A1-900) <a href='https://www.credly.com/badges/c2a5aece-5a36-44bf-be1e-978f8ec29bf2/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
+              <li><p>Microsoft Azure Data Fundamentals (DP-900) <a href='https://www.credly.com/badges/a5b7806d-8bca-4445-a80b-310eec3e2955/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
+                <li><p>Google Data Analytics Professional certification <a href='https://www.credly.com/badges/dfbd25e6-7f49-4bd7-8449-9d581b3a954f/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>              
                 <li><p>Google Digital Marketing certification</p></li>
                 <li><p>Atlassian Jira certification ( Coursera )</p></li>
             </ul>
