--- a/index.html
+++ b/index.html
@@ -452,12 +452,12 @@
 
 <div class="section" id="experience">
   <div class="container">
-    <!-- <div class="h4 text-center mb-4 title">Professional Skills</div> -->
+    <div class="h4 text-center mb-4 title">Professional Skills</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="row">
           <div class="card-body">
-            <div class="h4 mt-0 text-center title">Certification</div>
+<!--             <div class="h4 mt-0 text-center title">Certification</div> -->
             <ul>
                 <li><p>AWS Certified Developer Associate (DVA-C01) <a href='https://www.credly.com/badges/fd21ef2f-bc7c-40af-b77b-f9263ca83b06/public_url'><i class='fa fa-external-link' style='color:#34920c'></i>
 </a></p></li>              
