--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">21</div>
+              <div class="col-sm-8">22</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -461,7 +461,8 @@
             <ul>
                 <li><p>AWS Certified Developer Associate (DVA-C01) <a href='https://www.credly.com/badges/fd21ef2f-bc7c-40af-b77b-f9263ca83b06/public_url'><i class='fa fa-external-link' style='color:#34920c'></i>
 </a></p></li>              
-                <li><p>Microsoft Certified: Azure Fundamentals (AZ-900) <a href='https://www.credly.com/badges/cc97e288-b869-45a6-a5d1-ac9a7e25b81f/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
+              <li><p>Certified Terraform Associate <a href='https://www.credly.com/badges/c5d55a78-d18f-4b85-8d50-6ad8f98c4dcf/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
+              <li><p>Microsoft Certified: Azure Fundamentals (AZ-900) <a href='https://www.credly.com/badges/cc97e288-b869-45a6-a5d1-ac9a7e25b81f/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
                 <li><p>Microsoft Certified: Azure AI Fundamentals (A1-900) <a href='https://www.credly.com/badges/c2a5aece-5a36-44bf-be1e-978f8ec29bf2/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
               <li><p>Microsoft Certified: Azure Data Fundamentals (DP-900) <a href='https://www.credly.com/badges/a5b7806d-8bca-4445-a80b-310eec3e2955/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
               <li><p>Microsoft Certified: Security, Compliance, and Identity Fundamentals (SC-900) <a href='https://www.credly.com/badges/006bd1bb-97a2-4258-a738-f9888d940060/public_url' target="_blank"><i class='fa fa-external-link' style='color:#34920c'></i></a></p></li>
