--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>I’ve always been a great problem solver, an independent introvert, and a technophile obsessed with the latest devices. Today, I’m working as a software engineer for Sopra Steria India., and I get to show off all these elements of who I am.</p>
             <br><p>I started learning to code when I was a teenager, though it was always more of a hobby than a career focus. After a college education in Information Technology, and continuing to pursue that hobby, I realized software engineering was the right field for me.</p>
             <br><p>Since then, I’ve worked on countless freelance projects and have been involved with a handful of notable college committees. Today, I’m working as a Software Engineer with the amazing team at Sopra Steria India .</p>
-            <br><p>Some notable certifications accomplished by me are : AWS Certified Developer Associate, Microsoft Azure Fundamentals and Microsoft AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
+            <br><p>Some notable certifications accomplished by me are : AWS Certified Developer Associate, Hashicorp Certified Terraform Associate, AZ-900, AI-900, DP-900, SC-900, OCI Foundations and OCI AI Fundamentals. I’m familiar with a variety of programming languages, including TypeScript, HTML, CSS, Java, AWS but I’m always adding new skills to my repertoire.</p>
 <!--             <p>I have experience in Web Development and keen interest in Data Analytics. </p> -->
           </div>
         </div>
@@ -604,13 +604,13 @@
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/huzaifahmunshi1101" target="_blank"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://twitter.com/huzaifahmunshi?lang=en" target="_blank"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://in.linkedin.com/in/huzaifah-munshi-014002148" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/huzaifahmunshi/?hl=en" target="_blank"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       <div class="h4 title text-center">Huzaifah Munshi</div>
-      <div class="text-center text-muted">
+<!--       <div class="text-center text-muted">
         <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
-      </div>
-      <center>
+      </div> -->
+<!--       <center>
        <a href='https://www.symptoma.ro/'>Motor de căutare medicală</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e4b17907d72b8e93d72b5f4d649adaceb1f79471'></script>
       <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/842490/t/7"></script>
-      </center>
+      </center> -->
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
     <script src="js/core/popper.min.js?ver=1.1.0"></script>
